--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,38 +1,24 @@
-.App {
-  text-align: center;
+
+
+/* Styles for iPhone X and similar devices */
+@media only screen and (max-device-width: 375px) and (max-device-height: 812px) and (-webkit-device-pixel-ratio: 3) {
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+/* Styles for desktop screens with a resolution of 1920px and larger */
+@media only screen and (min-width: 1920px) {
+
+
+  .App-header {
+    /*background-color: #282c34;*/
+    /*min-height: 100vh;*/
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    padding: 2rem;
+    /*font-size: calc(10px + 2vmin);*/
+    /*color: white;*/
   }
-}
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
