--- a/client/src/components/UI/NavButton/NavButton.module.css
+++ b/client/src/components/UI/NavButton/NavButton.module.css
@@ -7,13 +7,13 @@
     align-items: center;
     border: 1px solid black;
     border-radius: 40px;
-    padding: 0 1rem;
+    padding: 0.5rem 1rem;
     width: 90%;
 }
 
 .arrow {
-    height: 2rem;
-    width: 2rem;
+    height: 1rem;
+    width: 1.2rem;
     z-index: 0;
 }
 
@@ -30,4 +30,5 @@
     text-align: center;
     color: var(--black);
     margin: 0;
+    font-size: 0.8rem;
 }
