--- a/client/src/components/MovieCard/MovieCard.module.css
+++ b/client/src/components/MovieCard/MovieCard.module.css
@@ -43,7 +43,7 @@
     align-items: center;
     width: 100%;
     /*padding: 1rem;*/
-    padding-top: 1rem;
+    padding-top: 0.7rem;
 
 ;
 }
@@ -76,12 +76,17 @@
     flex-direction: row;
     justify-content: start;
     align-items: center;
-    font-size: 1.5rem;
+    font-size: 1.1rem;
+    padding-top: 0.7rem;
 }
 
-.star-img {
+.star-img{
     display: flex;
     justify-content: center;
     align-items: center;
     padding-right: 0.4rem;
+}
+
+.star-img img{
+    height: 1.2rem;
 }
