--- a/client/src/components/MoviesList/MoviesList.module.css
+++ b/client/src/components/MoviesList/MoviesList.module.css
@@ -17,19 +17,21 @@
 .movie-list {
     display: flex;
     justify-content: center;
-    align-items: center;
     flex-direction: row;
     flex-wrap: wrap;
     max-width: 90%;
+    position: relative;
     margin: 0 auto;
 }
 
 .movie-card {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
     background-color: var(--blue);
     max-width: calc(100% / 6 - 1rem);
+    position: relative;
+    margin: 0;
+    padding: 0;
+    /*height: 100;*/
 }
 
