--- a/client/src/components/MovieCard/MovieCard.module.css
+++ b/client/src/components/MovieCard/MovieCard.module.css
@@ -1,21 +1,25 @@
 @import '../../colors.css#black';
 
 .container {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
+    display: grid;
+    /*flex-direction: column;*/
+    /*align-items: stretch;*/
+    /*grid-template-rows: repeat(6, 1fr);*/
+    grid-template-rows: 21rem 3.5rem 5rem;
+
     padding: 0.5rem;
     max-width: 500px; /* Adjust this value as needed */
 }
 
 .movie-img {
+    grid-row: 1/2;
     width: 100%;
-    height: 100%;
     object-fit: cover;
 }
 
 .title {
+    grid-row: 2/3;
+
     width: 100%;
     display: inline-block;
     /*flex-direction: column;*/
@@ -35,6 +39,14 @@
 
 .movie-released {
     /*display: inline-block;*/
+}
+
+.description{
+    grid-row: 3/4;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 .nav-button {
