--- a/client/src/components/MoviesList/MoviesList.module.css
+++ b/client/src/components/MoviesList/MoviesList.module.css
@@ -20,18 +20,16 @@
     flex-direction: row;
     flex-wrap: wrap;
     max-width: 90%;
-    position: relative;
+    align-items: stretch;
     margin: 0 auto;
 }
 
 .movie-card {
     display: flex;
-    flex-direction: column;
+    align-items: stretch;
     background-color: var(--blue);
     max-width: calc(100% / 6 - 1rem);
-    position: relative;
     margin: 0;
     padding: 0;
-    /*height: 100;*/
 }
 
