--- a/client/src/components/MovieCard/MovieCard.module.css
+++ b/client/src/components/MovieCard/MovieCard.module.css
@@ -1,44 +1,35 @@
-@import '../../colors.css#black';
+
 
 .container {
     display: grid;
-    /*flex-direction: column;*/
-    /*align-items: stretch;*/
-    /*grid-template-rows: repeat(6, 1fr);*/
-    grid-template-rows: 21rem 3.5rem 5rem;
-
+    grid-template-rows: 16rem 3.5rem 5rem;
     padding: 0.5rem;
-    max-width: 500px; /* Adjust this value as needed */
+    max-width: 500px;
 }
 
 .movie-img {
     grid-row: 1/2;
+    height: 100%;
     width: 100%;
     object-fit: cover;
 }
 
 .title {
     grid-row: 2/3;
-
     width: 100%;
     display: inline-block;
-    /*flex-direction: column;*/
     justify-content: start;
     font-family: Georgia, sans-serif;;
     font-weight: normal;
-    /*align-items: center;*/
     color: var(--black);
     padding-top: 0.5rem;
 }
 
 .movie-name {
-    /*display: inline-block;*/
-    /*justify-content:;*/
     padding-right: 0.5rem;
 }
 
 .movie-released {
-    /*display: inline-block;*/
 }
 
 .description{
@@ -56,8 +47,6 @@
     width: 100%;
     /*padding: 1rem;*/
     padding-top: 0.7rem;
-
-;
 }
 
 /*iPhone X*/
@@ -89,10 +78,11 @@
     justify-content: start;
     align-items: center;
     font-size: 1.1rem;
-    padding-top: 0.7rem;
+    padding-top: 0.8rem;
 }
 
 .star-img{
+    width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
