--- a/client/src/components/MoviesList/MoviesList.module.css
+++ b/client/src/components/MoviesList/MoviesList.module.css
@@ -29,7 +29,6 @@
     align-items: stretch;
     background-color: var(--blue);
     max-width: calc(100% / 6 - 1rem);
-    margin: 0;
-    padding: 0;
+    padding-bottom: 2rem;
 }
 
