--- a/client/src/components/UI/Popup/Popup.module.css
+++ b/client/src/components/UI/Popup/Popup.module.css
@@ -10,15 +10,17 @@
 
 .popup {
     position: fixed;
-    top: 20vh;
-    left: 5%;
-    width: 90%;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    overflow-y: auto;
+    width: 85%;
+    max-width: 80%;
     background-color: white;
     padding: 1rem;
     border-radius: 14px;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
     z-index: 30;
-    animation: slide-down 300ms ease-out forwards;
 }
 
 @media (min-width: 768px) {
