--- a/client/src/components/MovieInfo/MovieInfo.module.css
+++ b/client/src/components/MovieInfo/MovieInfo.module.css
@@ -1,14 +1,15 @@
 .container {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    padding: 2rem 4rem;
+    display: grid;
+    grid-template-columns:1fr 2.5fr;
+    padding: 2rem 0 2rem 0;
+    box-sizing: border-box;
 }
 
 .movie-img {
-    max-height: 80vh;
+    height: 100%;
+    width: 100%;
     margin-right: 1rem;
-    padding-right: 5rem;
+    padding-right: 3rem;
 }
 
 .content {
@@ -16,7 +17,7 @@
     flex-direction: column;
     justify-content: space-between;
     padding-left: 1rem;
-    padding-right: 5rem;
+    padding-right: 4rem;
 }
 
 .content-up {
@@ -40,17 +41,24 @@
 }
 
 .rating {
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    align-items: center;
     font-family: Arial, sans-serif;
     margin-bottom: 0.9rem;
+    /*padding-top: 0.8rem;*/
 }
 
 .synopsis{
     font-size: 1.2rem;
-    font-family: Georgia, sans-serif;;
+    font-family: Georgia, sans-serif;
+    padding-bottom: 13rem;
+
 }
 
 .content-down {
-    width: 50%;
+    width: 40%;
 }
 
 
