--- a/client/src/components/MoviesList/MoviesList.module.css
+++ b/client/src/components/MoviesList/MoviesList.module.css
@@ -14,6 +14,13 @@
     align-items: center;
 }
 
+.filters {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
 .movie-list {
     display: flex;
     justify-content: center;
