--- a/client/src/components/MoviesList/MoviesList.module.css
+++ b/client/src/components/MoviesList/MoviesList.module.css
@@ -1,4 +1,3 @@
-
 @import '../../colors.css#blue';
 
 .container {
@@ -20,21 +19,61 @@
     justify-content: space-evenly;
     align-items: center;
 }
-
-.movie-list {
-    display: flex;
-    justify-content: center;
-    flex-direction: row;
-    flex-wrap: wrap;
-    max-width: 100%;
-    margin: 0;
+/* iPhone X */
+@media (min-width: 375px) {
+    .movie-list {
+        display: flex;
+        justify-content: center;
+        flex-wrap: wrap;
+        max-width: 100%;
+        margin: 0;
+    }
 }
 
-.movie-card {
-    display: flex;
-    align-items: stretch;
-    background-color: var(--blue);
-    max-width: calc(100% / 6 - 1rem);
-    padding-bottom: 2rem;
+
+/* Web 1920 screen */
+@media (min-width: 1920px) {
+    .movie-list {
+        display: flex;
+        justify-content: center;
+        flex-wrap: wrap;
+        margin-left: 10rem;
+        margin-right: 10rem;
+    }
+
+    .movie-card {
+        width: calc((100% / 6) - 2rem);
+        display: unset;
+        max-width: 100%;
+        height: 100%;
+        object-fit: cover;
+
+    }
+}
+/*.movie-card {*/
+    /*display: flex;*/
+    /*align-items: stretch;*/
+    /*background-color: var(--blue);*/
+    /*padding-bottom: 2rem;*/
+/*}*/
+
+/* iPhone X */
+@media (min-width: 375px) and (max-width: 812px) {
+    .movie-card {
+        max-width: calc(50% - 0.8rem);
+    }
 }
 
+/* 'web */
+@media (min-width: 1920px) {
+    .movie-card {
+        max-width: calc(100% / 6 - 1rem);
+    }
+}
+
+/* Web 1920 screen*/
+@media (min-width: 1920px) {
+    .movie-card {
+        max-width: calc(100% / 6 - 1rem);
+    }
+}
