--- a/client/src/components/UI/Card/Card.module.css
+++ b/client/src/components/UI/Card/Card.module.css
@@ -1,6 +1,28 @@
-.card {
-    display: grid;
-    grid-template-rows: 16rem 4.5rem 5rem;
-    padding: 0.4rem;
-    max-width: 500px;
+
+/* iPhone X */
+@media (min-width: 375px) {
+
+    .card {
+        display: grid;
+        grid-template-rows: 16rem 4.5rem 5rem;
+        padding: 0.4rem;
+        max-width: 500px;
+
+    }
 }
+
+
+
+/* Web 1920 screen */
+@media (min-width: 1920px) {
+
+    .card {
+        display: grid;
+        grid-template-rows: 20rem 4.5rem 5rem;
+        padding: 0.4rem;
+        max-width: 100%;
+        margin-bottom: 5rem;
+
+    }
+}
+
